--- a/ipython-notebooks/rlpart1.ipynb
+++ b/ipython-notebooks/rlpart1.ipynb
@@ -313,7 +313,7 @@
     "counts = np.zeros(n) #stores counts of how many times we've taken a particular action\n",
     "#stores our softmax-generated probability ranks for each action\n",
     "av_softmax = np.zeros(n)\n",
-    "av_softmax[:] = 0.1 #initialize each action to have equal probability\n",
+    "av_softmax[:] = 1/n #initialize each action to have equal probability\n",
     "\n",
     "def reward(prob):\n",
     "    total = 0;\n",
